# trajectory_analizer

./: .gitignore  CMakeLists.txt  README.md  build.sh  plot-perfiles.py
include/: AnalizadorBase.h  AnalizadorDensidad.h  AnalizadorPresion.h  Configuracion.h  Geometria.h  ThreadPool.h
src/: AnalizadorBase.cpp  AnalizadorDensidad.cpp  AnalizadorPresion.cpp  Configuracion.cpp  Geometria.cpp  ThreadPool.cpp  main.cpp
